prevent recomputing of merged spectra during annotation by using stored spectra from aligned feature. Removed old SIRIUS project space implementation that prevented change  [skip ci]